--- a/ReantalApp/frmDashboard.resx
+++ b/ReantalApp/frmDashboard.resx
@@ -118,6 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnLogs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA68AAAOvAGVvHJJAAAAB3RJ
+        TUUH5AYKDDcbsoR2TAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFYSURBVDhP
+        fZNLTgJBFEV7IkwkfhahBDERdWDiAlwBatgGTlwERILRBYBx6syBnwU40Bh0G0bQgSPbc7tvt0ilvckJ
+        r+57rz5dRTSrOI7XoQcv8GkUn0DdZaFIluEMvmAATWiYfRiCcqdQclsqDDXfwxOs2A5EbhWe4Q5+J2Fw
+        Dmqet1UoaiqgSfqZoTNra4UrZ6KmrjqouqcmUx9n4JpCUbMD79Dy+AI6Cl6hmVQViPwWvMGxLXkHMFLw
+        ARv2A5ELmiXGmzBRMIGGzTZcQdnjbNttjaeFtw1jBfkR+F2EB7iGXQhWzoR/CMkR9BGH9jVehkf4hiPb
+        gchdQleBrkZXUnVO3hLseRiI3Jp7apmh56nHUUmMf0TNAui/0bOVmCW4BU2S72RW5LSymm9gznYqDE3S
+        B21Nj0T3rKvSNeqD6czK6Z/6t3laJLVKF0agNyIUdyA9c64o+gGOJNAXj/ddogAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnIncome.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
